add authentication